$Id: NEWS,v 1.7 1999-10-11 04:45:46 macgyver Exp $

1.2.0pre9

- New support for BSD sendfile() semantics.

- AuthPAMAuthoritative now defaults to False.  This should clear up any
  confusion on using PAM with AuthUserFile and friends.

- Removed Bandwidth from the documentation.

- Fixed a rare segfault in mod_auth.

- Logging has changed slightly to be more informative and more consistent.
    All messages that get logged are now preceded with
    <virtualhost> (remote host[remote ip]).

- mod_ldap for authentication against LDAP directories is now in place.

- ftpwho/ftpcount -- a grammatical error corrected, and they now build
    as seperate binaries.