@@ -323,7 +323,7 @@ AC_CHECK_FUNCS(getcwd gethostname gettimeofday mkdir rmdir select socket strerro
 AC_CHECK_FUNCS(strchr memcpy bcopy flock getopt getopt_long strsep)
 # __snprintf and __vsnprintf are only on solaris and _really_ broken there.
 AC_CHECK_FUNCS(vsnprintf snprintf)
-AC_CHECK_FUNCS(setsid setpassent seteuid setegid crypt fgetpwent fgetgrent)
+AC_CHECK_FUNCS(setsid setpassent setgroupent seteuid setegid crypt fgetpwent fgetgrent)
 AC_CHECK_FUNCS(inet_aton siginterrupt setpgid)
 AC_CHECK_FUNCS(regcomp)
 
